remoção dos botões de contato e planos e atualização do endereço de email para contato

--- a/site/public/beecorp.html
+++ b/site/public/beecorp.html
@@ -13,12 +13,11 @@
     <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=00e4d7a2-93fc-4264-9687-178ce11167fb"> </script>
     <body>
     <div class="header">
-      <a class="logo"><span style="color:#f19953">Bee</span>Corp</a>
+      <a href="beecorp.html" class="logo"><span style="color:#f19953">Bee</span>Corp</a>
       <ul class="navbar">
         <a href="index.html">HoneySpace</a>
         <a class="agora">A Beecorp</a>
-        <a href="planos.html">Planos</a>
-        <a href="beecorp.html">Contato</a>
+        <!-- <a href="planos.html">Planos</a> -->
       </ul>
       <div class="btn login">
         <a href="pagina_login.html">Login</a>
@@ -138,7 +137,7 @@
         <div class="divisoria"></div>
         <div class="card">
           <a>Entre em contato conosco</a>
-          <p>Formulario de contato<br>ou<br>suporte@honeyspace.com.br</p>
+          <p>support@beecorphelp.zendesk.com</p>
         </div>
       </div>
 </body>
