--- a/site/public/index.html
+++ b/site/public/index.html
@@ -17,12 +17,11 @@
   </head>
   <body>
     <div class="header">
-      <a class="logo"><span style="color: #f19953">Bee</span>Corp</a>
+      <a href="index.html" class="logo"><span style="color: #f19953">Bee</span>Corp</a>
       <ul class="navbar">
         <a class="agora">HoneySpace</a>
         <a href="beecorp.html">A Beecorp</a>
-        <a href="planos.html">Planos</a>
-        <a href="beecorp.html">Contato</a>
+        <!-- <a href="planos.html">Planos</a> -->
       </ul>
       <div class="btn login">
         <a href="pagina_login.html">Login</a>
@@ -160,7 +159,7 @@
       <div class="divisoria"></div>
       <div class="card">
         <a>Entre em contato conosco</a>
-        <p>Formulario de contato<br />ou<br />suporte@honeyspace.com.br</p>
+        <p>support@beecorphelp.zendesk.com</p>
       </div>
     </div>
   </body>
