--- a/site/public/planos.html
+++ b/site/public/planos.html
@@ -17,8 +17,7 @@
       <ul class="navbar">
         <a href="index.html">HoneySpace</a>
         <a href="beecorp.html">A Beecorp</a>
-        <a class="agora">Planos</a>
-        <a href="beecorp.html">Contato</a>
+        <!-- <a class="agora">Planos</a> -->
       </ul>
       <div class="btn login">
         <a href="pagina_login.html">Login</a>
@@ -107,7 +106,7 @@
         <div class="divisoria"></div>
         <div class="card">
           <a>Entre em contato conosco</a>
-          <p>Formulario de contato<br>ou<br>suporte@honeyspace.com.br</p>
+          <p>support@beecorphelp.zendesk.com</p>
         </div>
       </div>
 
