--- a/site/public/pagina_login.html
+++ b/site/public/pagina_login.html
@@ -18,8 +18,7 @@
       <ul class="navbar">
         <a href="index.html">HoneySpace</a>
         <a href="beecorp.html">A Beecorp</a>
-        <a href="planos.html">Planos</a>
-        <a href="beecorp.html">Contato</a>
+        <!-- <a href="planos.html">Planos</a> -->
       </ul>
       <div class="btn login">
         <a class="agora">Login</a>
@@ -70,7 +69,7 @@
         <div class="divisoria"></div>
         <div class="card">
           <a>Entre em contato conosco</a>
-          <p>Formulario de contato<br>ou<br>suporte@honeyspace.com.br</p>
+          <p>support@beecorphelp.zendesk.com</p>
         </div>
       </div>
 </body>
