--- a/site/public/pagina_login.html
+++ b/site/public/pagina_login.html
@@ -127,7 +127,7 @@
                     sessionStorage.EMAIL_USUARIO = json.Email;
                     sessionStorage.NOME_USUARIO = json.Nome;
                     sessionStorage.ID_USUARIO = json.idUsuario;
-                  
+                    sessionStorage.setItem("idUsuario",json.idUsuario)
                   
                     if(json.fkChefe == null){
                       sessionStorage.ADM = -1
